moved data map display to bottom, fixed social icons alignment

--- a/src/components/UI/Button/FbButton/FbButton.css
+++ b/src/components/UI/Button/FbButton/FbButton.css
@@ -1,7 +1,5 @@
 .fbShareBtn {
-   float: right;
-   margin-right: 10px;
-   margin-bottom: 10px;
+   margin-left: 10px;
 }
 
 .fbShareBtn:hover {
@@ -10,9 +8,6 @@
 
 @media screen and (max-width: 576px ) {    
     .fbShareBtn {
-        float: left;
-        padding-top: 5px;
-
         margin-left: 10px;
     }
 }
