--- a/src/containers/CoronaTracker/CoronaTracker.css
+++ b/src/containers/CoronaTracker/CoronaTracker.css
@@ -174,6 +174,13 @@
     margin-left: 10px;
 }
 
+.socialContainer {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    margin-bottom: 5px;
+}
+
 .twitterShareBtn {
     float: right;
     padding-top: 12px;
@@ -198,17 +205,8 @@
 }
 
 @media screen and (max-width: 576px ) {
-    .twitterShareBtn {
-        float: left;
-        padding-top: 5px;
-        padding-bottom: 5px;
-    }
-    
-    .fbShareBtn {
-        float: left;
-        padding-top: 5px;
-        padding-bottom: 5px;
-        margin-left: 10px;
+    .socialContainer {
+        justify-content: flex-start;
     }
 }
 
